perf: run event observation and handling on virtual threads
Consume the ESDB event stream synchronously on the calling thread and run each EventHandlingProcessor on its own virtual thread, removing the reactive BodySubscriber offload machinery.

Add EventHandlingProcessorTest (distribution, leader-election, failover, progress tracking, retry/skip/termination, transactional side-effects)